<resources>
    <string name="app_name">Multiple Activity</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="cart">Cart</string>
    <string name="title_activity_about_">About H+</string>
    <string name="twitter_web">Web Twitter</string>
    <string name="email">Email</string>
</resources>
