<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.saura.hsport.multipleactivity.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="101"
        android:title="@string/about"
        app:showAsAction="never" />
    <item
        android:id="@+id/logout"
        android:orderInCategory="102"
        android:title="@string/logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/WebTwitter"
        android:orderInCategory="103"
        android:title="@string/twitter_web"
        app:showAsAction="never" />
    <!--<item-->
        <!--android:id="@+id/writeToUs"-->
        <!--android:orderInCategory="104"-->
        <!--android:title="@string/email"-->
        <!--app:showAsAction="never" />-->
    <item
        android:id="@+id/cart"
        android:orderInCategory="0"
        android:title="@string/cart"
        app:showAsAction="always"
        android:icon="@drawable/logo"/>

</menu>
